# convex_hull_gui

./: .gitignore  .gitmodules  README.md  pyproject.toml
scripts/: bench_snapshot_chan_scipy.py  build_pyinstaller.py
src/adapters/: bruteforce_adapter.py  chan_adapter.py
src/algorithms/: __init__.py  polygonal_result.py
src/app/: hull_worker.py  random_source.py  service.py  startup_profile.py
src/domain/: __init__.py  entities.py
src/generators/: __init__.py  benchmarks.py  degeneracies.py  general_position.py
src/geometry/: __init__.py  exact_numbers.py  planar.py  plane_keys.py
src/gui/: __init__.py  controller.py  main.py  scene_widget.py  state.py  window.py
src/rendering/: __init__.py  scene.py  viewer.py
src/verification/: __init__.py  canonical.py  golden.py  scipy_oracle.py
tests/: test_benchmark_smoke.py
tests/gui/: conftest.py  test_controller.py  test_gui_imports.py  test_scene_widget.py  test_scene_widget_imports.py  test_state.py  test_window.py
